# damai-ticket

./: AGENTS.md  CLAUDE.md  CODEX.md  DEVLOG.md  README.md  pyproject.toml  requirements.txt
config/: accounts.toml  default.toml
src/damai/: __main__.py  constants.py  exceptions.py
src/damai/anti_detect/: fingerprint.py  headers.py  proxy.py
src/damai/core/: account.py  auth.py  captcha.py  detail.py  monitor.py  mtop_client.py  order.py
src/damai/gui/: app.py  main_window.py  workers.py
src/damai/gui/widgets/: log_tab.py  login_tab.py  qr_login_dialog.py  settings_tab.py  task_tab.py
src/damai/notify/: base.py  dingtalk.py  email.py  wechat.py
src/damai/utils/: config.py  crypto.py  time_sync.py
src/damai_ticket.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
