[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "damai-ticket"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.28",
    "PySide6>=6.6",
    "loguru>=0.7",
    "tomli-w>=1.0",
    "aiosmtplib>=3.0",
    "ntplib>=0.4",
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
where = ["src"]
